<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:id="@+id/txtTitle"
                android:background="@android:color/holo_orange_light"
                android:textColor="@android:color/holo_blue_dark"
                android:text="耶嘿～"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:id="@+id/txtSubTitle"
                android:background="@android:color/holo_blue_light"
                android:textColor="@android:color/holo_purple"
                android:text="OH YA"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="想說什麼..."/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSummit"
            android:text="確認"/>

        <!--radio button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="耶嘿～"
                android:id="@+id/rdb1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RdbTest2"
                android:id="@+id/rdb2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RdbTest3"
                android:id="@+id/rdb3"/>

        </LinearLayout>


        <!--CheckBox-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckTes1"
                android:id="@+id/chb1"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckTes2"
                android:id="@+id/chb2"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckTes3"
                android:id="@+id/chb3"/>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnList"
            android:text="Go To List"
            style="@android:style/Holo.ButtonBar"
            android:background="#CDDC39"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSMS"
            android:text="Go To SMS"
            style="@android:style/Holo.ButtonBar"
            android:background="#00BCD4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResult"
            android:text="Go To ActiivtyResult"
            style="@android:style/Holo.ButtonBar"
            android:background="#FFC107"/>

    </LinearLayout>

</ScrollView>