<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
          android:title="settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_restart"
          android:title="restart"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_cancel"
          android:title="cancel"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>